# LITTestingTemplate

./: .gitignore  CMakeLists.txt  readme.md
test/: CMakeLists.txt  ctlz.mlir  lit.cfg.py  lit.site.cfg.py.in
